# MentalMemoirs

./: .gitignore  pyproject.toml
MentalMemoirs/: manage.py
MentalMemoirs/MentalMemoirs/: asgi.py  settings.py  urls.py  wsgi.py
